--- a/app/src/main/res/layout/activity_meditate.xml
+++ b/app/src/main/res/layout/activity_meditate.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E5B3ED"
+    android:background="@color/Hex"
     tools:context=".ui.relax.Meditate">
 
     <EditText
@@ -16,7 +16,7 @@
         android:hint="@string/_5_30_minutes"
         android:inputType="number"
         android:maxLength="4"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.329"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,8 +32,8 @@
         android:layout_marginStart="40dp"
         android:layout_marginBottom="115dp"
         android:text="@string/set"
-        android:textColor="#000000"
-        app:backgroundTint="#1BEDD9"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/RobbinsEggBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.738"
@@ -48,8 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="128dp"
         android:layout_marginTop="30dp"
+        android:textColor="@color/Bluebell"
         android:text="00:00"
-        android:textColor="@android:color/white"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -63,11 +63,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="37dp"
         android:text="@string/start"
-        android:textColor="#000000"
-        app:backgroundTint="@color/mint"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/Bluebell"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.321"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -77,28 +77,26 @@
         android:id="@+id/button_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
         android:layout_marginBottom="37dp"
         android:text="@string/reset"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:visibility="invisible"
-        app:backgroundTint="#1BEDD9"
+        app:backgroundTint="@color/Raspberry"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.827"
+        app:layout_constraintHorizontal_bias="0.435"
         app:layout_constraintLeft_toRightOf="@+id/button_start_pause"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_start_pause"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.482"
-        tools:visibility="visible"
-        android:layout_marginLeft="56dp" />
+        tools:visibility="visible" />
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifImageView"
         android:layout_width="374dp"
         android:layout_height="332dp"
         android:layout_marginStart="24dp"
-        android:src="@drawable/meditate"
+        android:src="@drawable/vozyk_meditate_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -115,16 +113,14 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="cursive"
         android:text="@string/breathe_and_let_go"
-        android:textColor="#D71EF6"
-        android:textSize="48sp"
+        android:textColor="#234E70"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.112" />
+        app:layout_constraintVertical_bias="0.109" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
