<UI/UX fix 2.3.3>

--- a/app/src/main/res/layout/activity_breathing.xml
+++ b/app/src/main/res/layout/activity_breathing.xml
@@ -24,8 +24,7 @@
             android:text="@string/breathing_exercise"
             android:textAlignment="center"
             android:textColor="#234E70"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:textSize="30sp" />
 
     </LinearLayout>
 
