--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -10,17 +10,16 @@
     android:background="@color/Hex"
     tools:context=".ui.account.Account">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="176dp"
+        android:layout_height="139dp"
+        android:layout_gravity="center_horizontal"
+        android:clickable="false"
+        android:contentDescription="TODO"
+        android:src="@drawable/vozyk_log" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="132dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center_horizontal"
-            android:clickable="false"
-            android:src="@drawable/vozyk_log"
-            android:contentDescription="TODO" />
-
-        <TextView
+    <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -80,17 +79,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <ImageButton
                 android:id="@+id/settings"
                 android:layout_width="72dp"
                 android:layout_height="72dp"
-                android:background="@drawable/settings"
+                android:background="@drawable/settings_"
                 />
-
-
         </LinearLayout>
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+    <ImageView
+        android:id="@+id/image_logo"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:layout_below="@id/Email"
+        android:layout_marginBottom="496dp"
+        android:contentDescription="TODO"
+        android:src="@drawable/settings_vozyk" />
+
 
 </LinearLayout>
