<UI/UX fix 2.3.6>

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -43,7 +43,7 @@
             android:id="@+id/iv_edit_language"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/stttings__"
+            android:src="@drawable/settings__"
             android:layout_marginStart="40dp"
             android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -91,7 +91,7 @@
             android:padding="5dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/stttings__"
+            android:src="@drawable/settings__"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -131,11 +131,11 @@
 
         <ImageView
             android:id="@+id/iv_change_email"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/settings__"
             android:layout_marginStart="40dp"
             android:padding="5dp"
-            android:src="@drawable/settings"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -146,7 +146,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Change email"
-            android:textColor="@color/black"
+            android:textColor="#234E70"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_change_email"
@@ -178,7 +178,7 @@
             android:id="@+id/iv_privacy_policy"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/stttings__"
+            android:src="@drawable/settings__"
             android:layout_marginStart="40dp"
             android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -222,7 +222,7 @@
             android:id="@+id/iv_sign_out"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/stttings__"
+            android:src="@drawable/settings__"
             android:layout_marginStart="40dp"
             android:padding="5dp"
             android:textColor="#234E70"
